# pratmo-rust

./: .gitignore  .readthedocs.yaml  Cargo.toml  FORTRAN_PARITY.md  LICENSE  README.md  STATUS.md  agents.md  bugs.txt  plot_iodine_24km.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
developer-docs/: README.md  iodine_saiz_lopez_2014_upgrade.md
docs/: IODINE_CHEMISTRY.md  api-high-level.md  api-low-level.md  api-results.md  api.md  atmospheric-inputs.md  concepts.md  conf.py  ctm.md  custom-atmosphere.md  defaults.md  diurn.md  explorer.md  index.md  iodine_saiz_lopez_2014_upgrade.md  options.md  quickstart.md  releasing.md  requirements.txt  results.md  science-scope.md  species-and-units.md  standard-levels.md  troubleshooting.md  validation.md
examples/: README.md  ctm_profile.py  diurnal_cycle.py  iodine_diurnal_cycle.py  no2_constrained_custom_atmosphere.py  omps_no2_constrained_batch.py  osiris_pratmo_comparison.py
pratmo-cli/: Cargo.toml
pratmo-cli/src/: main.rs
pratmo-core/: Cargo.toml
pratmo-core/data/: fort01.x  fort02.x  fort04.x  fort05.x  fort10_cam06.x  fort11_jpl09.x  fort13.x  fort14.x  fort51.x
pratmo-core/src/: api.rs  chemistry.rs  clno3.rs  constants.rs  ctm.rs  diurnal.rs  heterogeneous.rs  init.rs  jvalue.rs  lib.rs  output.rs  path.rs  reader.rs  solver.rs  state.rs  tracers.rs
pratmo-core/tests/: ctm_integration.rs  custom_diurn.rs  fortran_parity_feature.rs  iodine_chemistry.rs
pratmo-core/tests/common/: mod.rs
pratmo-core/tests/fixtures/legacy_inputs/: fort01.x  fort03_LLM.x  fort10_cam06.x  fort11_jpl09.x  fort13.x  fort14.x
pratmo-py/: Cargo.toml
pratmo-py/src/: lib.rs
scripts/: compare_diagnostics.py  compare_numeric_outputs.py  fortran_differential.sh
src/pratmo/: __init__.py  _pratmo.pyi  climatology.py  interface.py  plotting.py  quantities.py
tests/: test_pratmo.py
