[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pratmo"
version = "0.1.0"
description = "Experimental AI-assisted Rust rewrite of the PRATMO photochemical box model"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
# PyO3 0.24 supports CPython through 3.13. Keep this upper bound in sync with
# the Rust binding dependencies so maturin does not discover unsupported hosts.
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Documentation = "https://github.com/usask-arg/pratmo-rust/tree/main/docs"
Repository = "https://github.com/usask-arg/pratmo-rust"

[project.optional-dependencies]
docs = [
    "sphinx>=8.0",
    "sphinx-autodoc-typehints>=2.0",
    "furo>=2024.1",
    "numpydoc>=1.7",
]
io = [
    "netCDF4>=1.7",
    "xarray>=2024.10",
]
plot = [
    "matplotlib>=3.9",
]
dev = [
    "netCDF4>=1.7",
    "pytest>=8.0",
    "numpy>=1.24",
    "xarray>=2024.10",
]

[tool.maturin]
manifest-path = "pratmo-py/Cargo.toml"
python-source = "src"
module-name = "pratmo._pratmo"
features = ["pratmo-py/extension-module"]

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "ipykernel>=7.2.0",
    "maturin>=1.8,<2.0",
    "myst-nb>=1.4.0",
    "netCDF4>=1.7",
    "numpydoc>=1.10.0",
    "pytest>=9.0.3",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
]
