[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pratmo"
version = "0.1.0"
description = "Experimental AI-assisted Rust rewrite of the PRATMO photochemical box model"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Documentation = "https://github.com/usask-arg/pratmo-rust/tree/main/docs"
Repository = "https://github.com/usask-arg/pratmo-rust"

[project.optional-dependencies]
docs = [
    "sphinx>=7.4",
    "sphinx-autodoc-typehints>=2.0",
    "furo>=2024.1",
    "numpydoc>=1.7",
]
io = [
    "netCDF4>=1.7",
    "xarray>=2024.7",
]
plot = [
    "matplotlib>=3.9",
]
dev = [
    "netCDF4>=1.7",
    "pytest>=8.4",
    "numpy>=1.24",
    "xarray>=2024.7",
]

[tool.maturin]
manifest-path = "pratmo-py/Cargo.toml"
python-source = "src"
module-name = "pratmo._pratmo"
features = ["pratmo-py/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "ipykernel>=6.29",
    "maturin>=1.8,<2.0",
    "myst-nb>=1.1",
    "netCDF4>=1.7",
    "numpydoc>=1.7",
    "pytest>=8.4",
    "sphinx>=7.4",
    "sphinx-autodoc-typehints>=2.0",
]
