[package]
name = "pratmo-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pratmo"
path = "src/main.rs"

[features]
default = []
# Forward the core's opt-in legacy policy to the command-line binary.
fortran-parity = ["pratmo-core/fortran-parity"]

[dependencies]
pratmo-core = { path = "../pratmo-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
