[package]
name = "pratmo-cli"
version.workspace = true
edition.workspace = true
description = "Command-line runner for the PRATMO photochemical box model"
repository.workspace = true
license.workspace = true
readme = "../README.md"

[[bin]]
name = "pratmo"
path = "src/main.rs"

[features]
default = []
# Forward the core's opt-in legacy policy to the command-line binary.
fortran-parity = ["pratmo-core/fortran-parity"]

[dependencies]
pratmo-core = { path = "../pratmo-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
