[package]
name = "pratmo-core"
version.workspace = true
edition.workspace = true
description = "Rust implementation of the PRATMO stratospheric photochemical box model"
repository.workspace = true
license.workspace = true
readme = "../README.md"

[features]
default = []
# Opt-in numerical differential-testing policy.  Source-level uses document
# the specific Fortran discrepancy and the normal Rust behavior beside each
# conditional; without this feature, corrected/physical Rust behavior stays
# the default.
fortran-parity = []

[dependencies]
ndarray = { version = "0.16", features = ["approx"] }
nalgebra = "0.33"
anyhow = "1"
thiserror = "1"
rayon = "1"
