[package]
name = "pratmo-py"
version.workspace = true
edition.workspace = true
description = "Python extension module for the PRATMO photochemical box model"
repository.workspace = true
license.workspace = true
readme = "../README.md"

[lib]
name = "_pratmo"
crate-type = ["cdylib"]

[dependencies]
pratmo-core = { path = "../pratmo-core" }
pyo3        = { version = "0.29", features = ["extension-module", "abi3-py39"] }
numpy       = "0.29"
ndarray     = "0.16"
anyhow      = "1"

[features]
extension-module = ["pyo3/extension-module"]
# Forward the core's opt-in legacy policy to the Python extension.
fortran-parity = ["pratmo-core/fortran-parity"]
